--- a/app/src/main/res/layout/activity_student_reg.xml
+++ b/app/src/main/res/layout/activity_student_reg.xml
@@ -78,7 +78,7 @@
                     android:id="@+id/etStudentRoll"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="number"
+                    android:inputType="text"
                     android:imeOptions="actionNext"
                     android:hint="@string/student_roll_id"/>
 
