--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -47,10 +47,17 @@
                         android:layout_height="match_parent"
                         android:background="@color/colorPrimary">
 
-                        <TextView
+                        <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:id="@+id/addressTv"/>
+                            android:gravity="center">
+                            <TextView
+                                android:textColor="@color/colorWhite"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:id="@+id/addressTv"
+                                android:textSize="14sp"/>
+                        </LinearLayout>
 
                         <LinearLayout
                             android:layout_width="match_parent"
