--- a/app/src/main/res/layout/activity_report.xml
+++ b/app/src/main/res/layout/activity_report.xml
@@ -13,6 +13,7 @@
         android:orientation="vertical"
         android:weightSum="10"
         android:gravity="center">
+        <include layout="@layout/toolbar_layout"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
@@ -273,7 +274,7 @@
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:text="Rikshawa"
+                                    android:text="Rickshaw"
                                     android:textColor="@color/colorWhite"/>
 
                             </LinearLayout>
